Widens the text in the sidebar to avoid wrapping

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -562,7 +562,7 @@ div.comments i {
 
 .sidebar p {
   text-align: left;
-  width: 178px;
+  width: 180px;
   margin: 0 auto;
 }
 
